# hermes-loop-plugin

./: .gitignore  CHANGELOG.md  CMD_REFERENCE.md  CONTRIBUTING.md  INSTALLATION.md  PUBLISHING.md  PUBLISH_TO_COMMUNITY.md  QUICKSTART.md  README.md  SKILL.md  SUMMARY.md  SUPER_QUICK_START.md  TESTING.md  USER_GUIDE.md  VERIFICATION.md  WHY_NO_SLASH_COMMANDS.md  __init__.py  commands.py  conftest.py  display.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
.github/: PUBLISHING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
examples/: QUICK_START.md
hermes_loop_plugin/: __init__.py  commands.py  tools.py
hook/: HOOK.yaml  handler.py
tests/: __init__.py  test_ci_cd.py  test_plugin.py
