[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-loop-plugin"
version = "1.1.1"
description = "Continuous task execution loop plugin for Hermes Agent"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Hermes Agent Community", email = "community@hermes-agent.dev"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["hermes-agent", "plugin", "loop", "iteration", "automation"]

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-loop-plugin"
Documentation = "https://github.com/NousResearch/hermes-loop-plugin#readme"
Repository = "https://github.com/NousResearch/hermes-loop-plugin.git"
Issues = "https://github.com/NousResearch/hermes-loop-plugin/issues"

[project.entry-points."hermes_agent.plugins"]
hermes-loop = "hermes_loop_plugin:register"

[tool.setuptools]
packages = ["hermes_loop_plugin"]

[tool.setuptools.package-dir]
hermes_loop_plugin = ""

